syntax = "proto3";
package vco.schemas;
message Vote {
  string schema = 1;
  bytes poll_cid = 2;
  uint32 option_index = 3;
  int64 timestamp_ms = 4;
}
